@startuml

title __SERVER's Class Diagram__\n

  package Server {
    class Connection {
        - socket : Socket
        - out : ObjectOutputStream
        - in : ObjectInputStream
        + Connection()
        + sendString()
        + receiveString()
        + sendFile()
        + receiveFile()
        + getRemoteSocketAddress()
        + close()
    }
  }
  

  package Server {
    class Server {
        + start()
    }
  }
  

  package Server {
    class Time {
        ~ hoursFrom : int
        ~ hoursTo : int
        ~ minsFrom : int
        ~ minsTo : int
        + Time()
        + currentTimeInRange()
    }
  }
  

  Connection -up-|> Closeable
  Server -up-|> Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
